# open-collider

./: .env.example  .gitignore  CONCEPTUAL_FOUNDATION.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: brainstorm.md  collider_setup.md
projects/_template/: brief_validated.json  input_bank.yaml  project_config.yaml
projects/_template/prompts/: idea_generation.md  judge.md
src/open_collider/: __init__.py  brainstorm.py  config.py  prompt_resolver.py  skill_interface.py
src/open_collider/data/: config.yaml
src/open_collider/llm/: client.py
src/open_collider/phases/: idea_generator.py  idea_scorer.py
src/open_collider/scoring/: data_loader.py  score_parser.py
src/open_collider/strategies/: deepen.py  fresh.py  refresh.py
tests/: test_api_mode.py  test_smoke.py
