[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-collider"
version = "2.0.0"
description = "Structured search for non-trivial ideas through cross-domain mechanism collision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Cedric Lion" }]
keywords = ["llm", "creativity", "bisociation", "ideation"]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.40", "httpx>=0.27", "python-dotenv>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"open_collider.data" = ["**/*.yaml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
